--- a/style.css
+++ b/style.css
@@ -1,19 +1,25 @@
-.top-bar {
-  width: 100%;
-  height: 15px;
-  background-color: #007bff; /* Cor de fundo azul (pode ajustar conforme necessário) */
-}
-.about_me {
-  float: left;
-  width: 50%; /* Dividir em duas colunas */
-}
-.img_prog {
-  float: left;
-  width: 50%; /* Dividir em duas colunas */
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.list >.nav-pills {
+.header_nav {
   background-color: #000;
   padding: 15px;
 }
 
+.navbar-nav{
+  margin: auto;
+}
+
+.navbar-nav > .nav-link{
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.container {
+  background-color: #007bff;
+  width: 100%;
+}
