--- a/style.css
+++ b/style.css
@@ -1,25 +1,28 @@
 *{
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+  font-family: Rajdhani, Yanoni;
 }
 
-.header_nav {
-  background-color: #000;
-  padding: 15px;
+#home {
+	background: #181834;
+	color: white;
+}
+.row{
+	margin-left: 0;
+	margin-right: 0;
 }
 
-.navbar-nav{
-  margin: auto;
+.caixa{
+	padding: 60px 0;
+	border-bottom: 1px solid #e5e5e5;
 }
 
-.navbar-nav > .nav-link{
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
+footer p a {
+	margin-top: 5px;
+	margin-right: 15px;
+	margin-left: 15px;
+	text-decoration: none;
 }
 
-.container {
-  background-color: #007bff;
-  width: 100%;
+form div input {
+	width: 230px;
 }
