--- a/style.css
+++ b/style.css
@@ -16,3 +16,14 @@
   height: 100px;
   object-fit: cover;
 }
+
+.col-md-3 {
+  text-align: center;
+}
+
+.col-md-3 img {
+  display: inline-block;
+  vertical-align: middle;
+  max-width: 100%;
+  max-height: 100%;
+}
